# sm-creator

./: .gitignore  README.md  pyproject.toml  pytest.ini  run.py
creator/core/: BaseElement.py  BasePage.py  CreatorDriver.py
creator/core/android/: AndroidConfig.yaml  AndroidCreatorDriver.py  AndroidElement.py  GetDriver.py  Log.py
creator/core/ios/: IosCreatorDriver.py  IosElement.py
creator/core/mac/: MacCreatorDriver.py  MacElement.py
creator/core/web/: WebCreatorDriver.py  WebElement.py
creator/core/windows/: WindowsCreatorDriver.py
tests/: conftest.py  test_creator.py
